cicd/komoplane/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${KOMOPLANE_NAMESPACE:-komoplane}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
